fix(common): Create `FakeClass`